eqi responsive and changes done

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -303,7 +303,7 @@
   .section-motion-graphic {
     @apply flex;
     @apply justify-center;
-    @apply h-full;
+    /* @apply h-full; */
   }
   
   .bg-program-design {
